--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,5 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.xmz0426.workout.MainActivity">
+    
+    <fragment
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        class="com.example.xmz0426.workout.WorkDetailFragment"
+        android:id="@+id/detail_frag"
+        >
+
+    </fragment>
 
 </RelativeLayout>
